--- a/frontend/src/components/Navigation.css
+++ b/frontend/src/components/Navigation.css
@@ -11,7 +11,7 @@
     /* position: fixed; */
     z-index: 1000;
     -webkit-backface-visibility: hidden;
-    background-color: #283475;
+    background-color: #f5f5f5;
 
 }
 
@@ -20,14 +20,13 @@
 }
 .navigation .navigation-area a.logo-area:before {
     content: 'Events';
-    background-color: #f3ebff;
-    color: var(--blue);
+    background-color: #004b8c;
+    color: white;
     font-weight: 800;
     position: absolute;
-    padding: 4px;
-    transform: rotate(340deg);
-    bottom: 20px;
-    right: -70px;
+    padding: 5px;
+    bottom: 8px;
+    right: 110px;
 }
 
 .navigation .navigation-area {
