--- a/frontend/src/_variable.css
+++ b/frontend/src/_variable.css
@@ -2,7 +2,7 @@
 @import url(https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
 :root {
-    --blue: #1b3783;
+    --blue: #004b8c;
     --lightgray: lightgray;
     --gray: #ccced0;
     --bluish-gray: #eaedef;
