Fix elements for Navigation

--- a/frontend/src/_variable.css
+++ b/frontend/src/_variable.css
@@ -9,7 +9,7 @@
     --darkgray: rgba(21, 35, 45, 0.8);
     --sans-serif: 'Montserrat', sans-serif;
     --light-blue: rgba(68,0,153,.1);
-    --highlight: #ffb900;
+    --highlight: #ff430f;
 }
 
 .btn {
