--- a/frontend/src/components/Navigation.css
+++ b/frontend/src/components/Navigation.css
@@ -154,7 +154,7 @@
 }
 
 .navigation .donate-button {
-    background-color: #DB3E3E !important;
+    background-color: var(--highlight) !important;
 
     color: #fff!important;
     font-size: 16px!important;
