--- a/frontend/src/components/EventSingle.css
+++ b/frontend/src/components/EventSingle.css
@@ -1,31 +1,31 @@
-.event-list-item-container {
+#maps-for-all-content .event-list-item-container {
     padding: 20px;
     display: flex;
 }
 
-.event-list-item-container .event-list-item-title {
+#maps-for-all-content .event-list-item-container .event-list-item-title {
     margin-top: 5px;
     /* margin-bottom: 10px; */
 }
 
-.event-list-item-container .event-list-item-title a {
+#maps-for-all-content .event-list-item-container .event-list-item-title a {
     text-decoration: none;
     color: var(--blue);
     font-weight: 600;
 }
 
-.event-list-item-container .event-list-item-info {
+#maps-for-all-content .event-list-item-container .event-list-item-info {
     flex-grow: 1;
     flex-basis: 0;
 }
 
-.event-list-item-container .event-list-item-date {
+#maps-for-all-content .event-list-item-container .event-list-item-date {
     color: var(--darkgray);
     font-size: 14px;
     font-weight: 600;
     width: 65px;
 }
-.event-list-item-container .event-list-date-view {
+#maps-for-all-content .event-list-item-container .event-list-date-view {
     /* border: 1px solid var(--darkgray); */
     padding: 5px;
     font-weight: 600;
@@ -39,7 +39,7 @@
     padding-top: 7px;
 }
 
-.event-list-item-container .event-list-item-description {
+#maps-for-all-content .event-list-item-container .event-list-item-description {
     font-size: 14px;
     margin-top: 15px;
     margin-bottom: 10px;
@@ -53,23 +53,23 @@
     text-shadow: 0px 1px 1px rgba(0,0,0,0.2);
 }
 
-.event-list-item-container .event-list-time-data,
-.event-list-item-container .event-list-item-desc span {
+#maps-for-all-content .event-list-item-container .event-list-time-data,
+#maps-for-all-content .event-list-item-container .event-list-item-desc span {
     margin-top: 2px;
 }
-.event-list-item-container .event-list-item-desc {
+#maps-for-all-content .event-list-item-container .event-list-item-desc {
     font-size: 12px;
     line-height: 14px;
     margin-bottom: 5px;
     margin-top: 5px;
     display: flex;
 }
-.event-list-item-container .event-list-item-desc span {
+#maps-for-all-content .event-list-item-container .event-list-item-desc span {
     flex-grow: 1;
     flex-basis: 0;
 }
 
-.event-list-item-container .event-list-icon {
+#maps-for-all-content .event-list-item-container .event-list-icon {
     width: 15px;
     height: 15px;
     margin-right: 5px;
@@ -79,14 +79,14 @@
 
     opacity: 0.6;
 }
-.event-list-item-container .event-list-date-data {
+#maps-for-all-content .event-list-item-container .event-list-date-data {
     font-size: 24px;
     letter-spacing: 1px;
     color: #333;
     font-weight: 800;
 }
 
-.event-list-item-container .event-list-month-data {
+#maps-for-all-content .event-list-item-container .event-list-month-data {
     text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 14px;
@@ -96,7 +96,7 @@
     /* text-shadow: 0px 1px 1px rgba(0,0,0,0.2); */
 }
 
-.event-list-item-container .event-list-item-type span {
+#maps-for-all-content .event-list-item-container .event-list-item-type span {
     border-radius: 4px;
     display: inline-block;
     background-color: var(--lightgray);
@@ -109,7 +109,7 @@
     font-size: 10px;
 }
 
-.event-list-item-container .event-list-item-cta a.event-list-item-cta-btn {
+#maps-for-all-content .event-list-item-container .event-list-item-cta a.event-list-item-cta-btn {
     background-color: transparent;
     border-color: var(--blue);
     border-width: 2px;
@@ -122,7 +122,7 @@
     font-weight: 800;
 }
 
-.event-list-item-container .event-list-item-cta a.event-list-item-cta-btn:hover {
+#maps-for-all-content .event-list-item-container .event-list-item-cta a.event-list-item-cta-btn:hover {
     color: white;
     background-color: var(--blue);
 }
