--- a/frontend/src/components/ListItem.css
+++ b/frontend/src/components/ListItem.css
@@ -1,5 +1,5 @@
 
-.event-list-item {
+#maps-for-all-content .event-list-item {
     /* border-bottom: 1px dashed gray; */
     font-family: var(--sans-serif);
     border-left: 4px solid gray;
@@ -8,10 +8,10 @@
     background-color: whitesmoke;
 }
 
-.event-list-item:first-child {
+#maps-for-all-content .event-list-item:first-child {
     margin-top: 0;
 }
 
-.event-list-item:last-child {
+#maps-for-all-content .event-list-item:last-child {
     margin-bottom: 0;
 }
