--- a/frontend/src/components/MapView.css
+++ b/frontend/src/components/MapView.css
@@ -1,9 +1,9 @@
-.map-area {
+#maps-for-all-content .map-area {
   flex-grow: 1;
   background-color: var(--bluish-gray);
   height: 100%;
 }
 
-.mapboxgl-popup-content {
+#maps-for-all-content .mapboxgl-popup-content {
   padding: 0 !important;
 }
