Event Information updates on style

--- a/frontend/src/components/EventBundled.css
+++ b/frontend/src/components/EventBundled.css
@@ -1,7 +1,7 @@
 #maps-for-all-content .event-bundled-loc {
     display: flex;
     padding: 10px;
-    background-color: #f3ebff;
+    background-color: #fff4ed;
 }
 
 #maps-for-all-content .event-bundled-loc img {
